fixes spacing between wins-text and wins-badges

--- a/_sass/components/_wins-page.scss
+++ b/_sass/components/_wins-page.scss
@@ -34,7 +34,7 @@
 
 .wins-card-text {
 	margin-top: 40px;
-	height: 88px;
+	max-height: 88px;
 	overflow: hidden;
 	position: relative;
     &.relative {
@@ -54,7 +54,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: start;
-    margin: 1em 0 0 6.5rem;
+    // margin: 1em 0 0 6.5rem;
 }
 .wins-item-container{
     display: inline-block;
@@ -254,7 +254,7 @@
     }
 
     .wins-card-text{
-        height: 81px;
+        max-height: 81px;
         position: inherit;
     }
 
@@ -283,7 +283,7 @@
 
 @media #{$bp-below-mobile} {
     .wins-card-text{
-        height: 80px;
+        max-height: 80px;
         margin-top: 16px;
     }
     .wins-card{
@@ -412,6 +412,7 @@
         display: none;
     }
     .expanded{
+        max-height: none;
         height: auto;
         .wins-see-more-div {
             z-index: 10;
@@ -449,7 +450,7 @@
         margin-left: 0em;
 
         .wins-icon-container{
-            margin: 1.5em 0 0 6.5rem;
+            // margin: 1.5em 0 0 6.5rem;
             display: block;
         }
         .wins-item-container{
@@ -483,9 +484,9 @@
 }
 
 @media #{$bp-below-mobile} {
-    .wins-icon-container{
-        margin-left: 3.5em
-    }
+    // .wins-icon-container{
+    //     // margin-left: 3.5em
+    // }
     .wins-tablet {
         .wins-item-container{
             margin-left: 0;
